fixing header on mobile

--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,36 @@ p {
 .internal {
     border-top: 7px solid #3b4140;
 }
+
+/* Styles for tablets */
+@media only screen and (max-width : 920px) {
+h1 {
+    width: 390px;
+    height: 135px;
+    padding: 0px;
+    font-size: 2.5em;
+    margin: 0 auto;
+    }
+    
+}
+
+
+/* Styles for tablets */
+@media only screen and (max-width : 920px) {
+h1 {
+    width: 390px;
+    height: 135px;
+    padding: 0px;
+    font-size: 2em;
+    margin: 0 auto;
+    }
+    
+
+.menu_right {
+    float: left;
+    text-align: left;
+    padding: 0 20px;
+}
+
+
+}
